iptables/rules.v4
# Generated by iptables-save v1.8.7 on Thu Jun  9 12:19:51 2022
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [678:90397]
:BLACKLIST - [0:0]
:BLACKLISTWAN - [0:0]
:ICMPFLOOD - [0:0]
:SSHBRUTE - [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -s 127.0.0.0/8 ! -i lo -j DROP
-A INPUT -m addrtype --dst-type BROADCAST -j DROP
-A INPUT -m addrtype --dst-type MULTICAST -j DROP
-A INPUT -m addrtype --dst-type ANYCAST -j DROP
-A INPUT -d 224.0.0.0/4 -j DROP
-A INPUT -i enp3s0 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i enp3s0 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i enp3s0 -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i enp3s0 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i lo -p tcp -m tcp --dport 4711 -j ACCEPT
-A INPUT -i lo -p tcp -m tcp --dport 9050 -j ACCEPT
#-A INPUT -i enp3s0 -p tcp -m tcp --dport 9050 -j ACCEPT
#-A INPUT -i enp1s0 -p tcp -m tcp --dport 9050 -j ACCEPT
-A INPUT -i enp3s0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -i enp1s0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -i enp3s0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -i enp1s0 -p tcp -m tcp --dport 80 -j ACCEPT
#-A INPUT -i enp3s0 -p tcp -m tcp --dport 81 -j ACCEPT
#-A INPUT -i enp1s0 -p tcp -m tcp --dport 81 -j ACCEPT
-A INPUT -i enp3s0 -p udp -m udp --dport 67:68 -j ACCEPT
-A INPUT -i enp3s0 -p udp -m udp --dport 137 -j ACCEPT
-A INPUT -i enp3s0 -p udp -m udp --dport 138 -j ACCEPT
-A INPUT -i enp3s0 -p tcp -m tcp --dport 139 -j ACCEPT
-A INPUT -i enp3s0 -p tcp -m tcp --dport 445 -j ACCEPT
-A INPUT -i enp3s0 -p tcp -m tcp --dport 25565 -j ACCEPT
-A INPUT -i enp3s0 -p udp -m udp --dport 25565 -j ACCEPT
-A INPUT -i enp3s0 -p tcp -m tcp --dport 1883 -j ACCEPT
-A INPUT -i enp3s0 -p udp -m udp --dport 1883 -j ACCEPT
-A INPUT -i enp3s0 -p tcp -m tcp --dport 8883 -j ACCEPT
-A INPUT -i enp3s0 -p udp -m udp --dport 8883 -j ACCEPT
-A INPUT -i enp3s0 -p tcp -m tcp --dport 8884 -j ACCEPT
-A INPUT -i enp3s0 -p udp -m udp --dport 8884 -j ACCEPT
-A INPUT -i enp3s0 -p tcp -m tcp --dport 5001 -j ACCEPT
-A INPUT -i enp3s0 -p udp -m udp --dport 5001 -j ACCEPT
-A INPUT -i enp3s0 -p tcp -m tcp --dport 4001 -j ACCEPT
-A INPUT -i enp3s0 -p udp -m udp --dport 4001 -j ACCEPT
-A INPUT -i enp3s0 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -i enp3s0 -p udp -m udp --dport 8080 -j ACCEPT
#-A INPUT -i enp1s0 -p tcp -m tcp --dport 5001 -j ACCEPT
#-A INPUT -i enp1s0 -p udp -m udp --dport 5001 -j ACCEPT
#-A INPUT -i enp1s0 -p tcp -m tcp --dport 4001 -j ACCEPT
#-A INPUT -i enp1s0 -p udp -m udp --dport 4001 -j ACCEPT
#-A INPUT -i enp1s0 -p tcp -m tcp --dport 8080 -j ACCEPT
#-A INPUT -i enp1s0 -p udp -m udp --dport 8080 -j ACCEPT
#-A INPUT -i enp3s0 -p tcp -m tcp --dport 9090 -j ACCEPT
#-A INPUT -i enp3s0 -p udp -m udp --dport 9090 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j SSHBRUTE
-A INPUT -p icmp -m icmp --icmp-type 0 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 3 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -m conntrack --ctstate NEW -j ICMPFLOOD
-A INPUT -p icmp -m icmp --icmp-type 11 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p udp -m multiport --dports 135,445 -j DROP
-A INPUT -p udp -m udp --dport 137:139 -j DROP
-A INPUT -p udp -m udp --sport 137 --dport 1024:65535 -j DROP
-A INPUT -p tcp -m multiport --dports 135,139,445 -j DROP
-A INPUT -p udp -m udp --dport 1900 -j DROP
-A INPUT -p udp -m udp --sport 53 -j DROP
-A INPUT -p tcp -m tcp --dport 113 --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j REJECT --reject-with tcp-reset
-A INPUT -m limit --limit 1/sec --limit-burst 100 -j LOG --log-prefix "iptables[DOS]: "
-A FORWARD -j BLACKLIST
-A FORWARD -j BLACKLISTWAN
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i enp3s0 -o enp1s0 -j ACCEPT
-A BLACKLIST -i enp3s0 -o enp1s0 -m set --match-set blacklist src -j DROP
-A BLACKLISTWAN -i enp1s0 -o enp3s0 -m set --match-set blacklistWAN src -j DROP
-A ICMPFLOOD -m recent --set --name ICMP --mask 255.255.255.255 --rsource 
-A ICMPFLOOD -m recent --update --seconds 1 --hitcount 6 --rttl --name ICMP --mask 255.255.255.255 --rsource -m limit --limit 1/sec --limit-burst 1 -j LOG --log-prefix "iptables[ICMP-flood]: "
-A ICMPFLOOD -m recent --update --seconds 1 --hitcount 6 --rttl --name ICMP --mask 255.255.255.255 --rsource -j DROP
-A ICMPFLOOD -j ACCEPT
-A SSHBRUTE -m recent --set --name SSH --mask 255.255.255.255 --rsource 
-A SSHBRUTE -m recent --update --seconds 300 --hitcount 10 --name SSH --mask 255.255.255.255 --rsource -m limit --limit 1/sec --limit-burst 100 -j LOG --log-prefix "iptables[SSH-brute]: "
-A SSHBRUTE -m recent --update --seconds 300 --hitcount 10 --name SSH --mask 255.255.255.255 --rsource -j DROP
-A SSHBRUTE -j ACCEPT
COMMIT
# Completed on Thu Jun  9 12:19:51 2022
# Generated by iptables-save v1.8.7 on Thu Jun  9 12:19:51 2022
*nat
:PREROUTING ACCEPT [277:88112]
:INPUT ACCEPT [72:5222]
:OUTPUT ACCEPT [70:4972]
:POSTROUTING ACCEPT [0:0]
#-A PREROUTING -d 192.168.100.44 -p tcp --dport 81 -j DNAT --to-destination 10.0.0.116:80
-A POSTROUTING -o enp1s0 -j MASQUERADE
COMMIT
# Completed on Thu Jun  9 12:19:51 2022
