iptables/rules.v6
# Generated by ip6tables-save v1.8.4 on Thu Jan  6 13:57:34 2022
*nat
:PREROUTING ACCEPT [8:4780]
:INPUT ACCEPT [6:4080]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -o enp1s0 -j MASQUERADE
COMMIT
# Completed on Thu Jan  6 13:57:34 2022
# Generated by ip6tables-save v1.8.4 on Thu Jan  6 13:57:34 2022
*filter
:INPUT DROP [2:700]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [1142:119596]
:ICMPFLOOD - [0:0]
:SSHBRUTE - [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -s ::1/128 ! -i lo -j DROP
-A INPUT -i enp3s0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -i enp3s0 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i enp3s0 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i enp3s0 -p tcp -m tcp --dport 67 -j ACCEPT
-A INPUT -i enp3s0 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i lo -p tcp -m tcp --dport 4711 -j ACCEPT
-A INPUT -i enp3s0 -p tcp -m tcp --dport 81 -j ACCEPT
-A INPUT -i lo -p tcp -m tcp --dport 9050 -j ACCEPT
-A INPUT -i enp3s0 -p tcp -m tcp --dport 9050 -j ACCEPT
-A INPUT -i enp1s0 -p tcp -m tcp --dport 9050 -j ACCEPT
-A INPUT -i enp3s0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -i enp1s0 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -i enp3s0 -p udp -m udp --dport 67:68 -j ACCEPT
-A INPUT -i enp3s0 -p udp -m udp --dport 137 -j ACCEPT
-A INPUT -i enp3s0 -p udp -m udp --dport 138 -j ACCEPT
-A INPUT -i enp3s0 -p tcp -m tcp --dport 139 -j ACCEPT
-A INPUT -i enp3s0 -p tcp -m tcp --dport 445 -j ACCEPT
-A INPUT -i enp3s0 -p tcp -m tcp --dport 25565 -j ACCEPT
-A INPUT -i enp3s0 -p udp -m udp --dport 25565 -j ACCEPT
-A INPUT -i enp3s0 -p tcp -m tcp --dport 5001 -j ACCEPT
-A INPUT -i enp3s0 -p udp -m udp --dport 5001 -j ACCEPT
-A INPUT -i enp3s0 -p tcp -m tcp --dport 4001 -j ACCEPT
-A INPUT -i enp3s0 -p udp -m udp --dport 4001 -j ACCEPT
-A INPUT -i enp3s0 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -i enp3s0 -p udp -m udp --dport 8080 -j ACCEPT
-A INPUT -i enp1s0 -p tcp -m tcp --dport 5001 -j ACCEPT
-A INPUT -i enp1s0 -p udp -m udp --dport 5001 -j ACCEPT
-A INPUT -i enp1s0 -p tcp -m tcp --dport 4001 -j ACCEPT
-A INPUT -i enp1s0 -p udp -m udp --dport 4001 -j ACCEPT
-A INPUT -i enp1s0 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -i enp1s0 -p udp -m udp --dport 8080 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j SSHBRUTE
-A INPUT -p ipv6-icmp -m icmp6 --icmpv6-type 1 -j ACCEPT
-A INPUT -p ipv6-icmp -m icmp6 --icmpv6-type 2 -j ACCEPT
-A INPUT -p ipv6-icmp -m icmp6 --icmpv6-type 3 -j ACCEPT
-A INPUT -p ipv6-icmp -m icmp6 --icmpv6-type 4 -j ACCEPT
-A INPUT -p ipv6-icmp -m icmp6 --icmpv6-type 133 -j ACCEPT
-A INPUT -p ipv6-icmp -m icmp6 --icmpv6-type 134 -j ACCEPT
-A INPUT -p ipv6-icmp -m icmp6 --icmpv6-type 135 -j ACCEPT
-A INPUT -p ipv6-icmp -m icmp6 --icmpv6-type 136 -j ACCEPT
-A INPUT -p ipv6-icmp -m icmp6 --icmpv6-type 137 -j ACCEPT
-A INPUT -p ipv6-icmp -m icmp6 --icmpv6-type 141 -j ACCEPT
-A INPUT -p ipv6-icmp -m icmp6 --icmpv6-type 142 -j ACCEPT
-A INPUT -s fe80::/10 -p ipv6-icmp -m icmp6 --icmpv6-type 130 -j ACCEPT
-A INPUT -s fe80::/10 -p ipv6-icmp -m icmp6 --icmpv6-type 131 -j ACCEPT
-A INPUT -s fe80::/10 -p ipv6-icmp -m icmp6 --icmpv6-type 132 -j ACCEPT
-A INPUT -s fe80::/10 -p ipv6-icmp -m icmp6 --icmpv6-type 143 -j ACCEPT
-A INPUT -p ipv6-icmp -m icmp6 --icmpv6-type 148 -j ACCEPT
-A INPUT -p ipv6-icmp -m icmp6 --icmpv6-type 149 -j ACCEPT
-A INPUT -s fe80::/10 -p ipv6-icmp -m icmp6 --icmpv6-type 151 -j ACCEPT
-A INPUT -s fe80::/10 -p ipv6-icmp -m icmp6 --icmpv6-type 152 -j ACCEPT
-A INPUT -s fe80::/10 -p ipv6-icmp -m icmp6 --icmpv6-type 153 -j ACCEPT
-A INPUT -p ipv6-icmp -m icmp6 --icmpv6-type 128 -j ICMPFLOOD
-A INPUT -p udp -m multiport --dports 135,445 -j DROP
-A INPUT -p udp -m udp --dport 137:139 -j DROP
-A INPUT -p udp -m udp --sport 137 --dport 1024:65535 -j DROP
-A INPUT -p tcp -m multiport --dports 135,139,445 -j DROP
-A INPUT -p udp -m udp --dport 1900 -j DROP
-A INPUT -p udp -m udp --sport 53 -j DROP
-A INPUT -p tcp -m tcp --dport 113 --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j REJECT --reject-with tcp-reset
-A INPUT -m limit --limit 1/sec --limit-burst 100 -j LOG --log-prefix "ip6tables[DOS]: "
-A FORWARD -i enp3s0 -o enp1s0 -m set --match-set blacklist6 src -j DROP
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i enp3s0 -o enp1s0 -j ACCEPT
-A ICMPFLOOD -m recent --set --name ICMP --mask ffff:ffff:ffff:ffff:ffff:ffff:ffff:ffff --rsource
-A ICMPFLOOD -m recent --update --seconds 1 --hitcount 6 --rttl --name ICMP --mask ffff:ffff:ffff:ffff:ffff:ffff:ffff:ffff --rsource -m limit --limit 1/sec --limit-burst 1 -j LOG --log-prefix "ip6tables[ICMP-flood]: "
-A ICMPFLOOD -m recent --update --seconds 1 --hitcount 6 --rttl --name ICMP --mask ffff:ffff:ffff:ffff:ffff:ffff:ffff:ffff --rsource -j DROP
-A ICMPFLOOD -j ACCEPT
-A SSHBRUTE -m recent --set --name SSH --mask ffff:ffff:ffff:ffff:ffff:ffff:ffff:ffff --rsource
-A SSHBRUTE -m recent --update --seconds 300 --hitcount 10 --name SSH --mask ffff:ffff:ffff:ffff:ffff:ffff:ffff:ffff --rsource -m limit --limit 1/sec --limit-burst 100 -j LOG --log-prefix "ip6tables[SSH-brute]: "
-A SSHBRUTE -m recent --update --seconds 300 --hitcount 10 --name SSH --mask ffff:ffff:ffff:ffff:ffff:ffff:ffff:ffff --rsource -j DROP
-A SSHBRUTE -j ACCEPT
COMMIT
# Completed on Thu Jan  6 13:57:34 2022
